css bugfix with a too wide dashboard geo search bar

--- a/src/less/components/dashboard.less
+++ b/src/less/components/dashboard.less
@@ -77,9 +77,9 @@ span.action-button:last-child a.btn {
     right: 0;
 
     & form {
-      max-width: 100%;
-      padding-left: 16px;
-        padding-right: 16px;
+        max-width: ~"calc(100% - 32px)";
+        margin-left: 16px;
+        margin-right: 16px;
     }
 }
 
